<resources>
    <string name="app_name">KnowBible</string>
    <string name="ADS_APPLICATION_ID" translatable="false">ca-app-pub-1132056005859803~7493831697</string>
    <string name="INTER_AD_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="NATIVE_AD_ID" translatable="false">ca-app-pub-1132056005859803/6198993524</string>
    <string name="REWARDED_AD_ID" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="BANNER_AD_ID" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="deleting">Удалить все стихи?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="my_daily_verse">Мой стих дня:</string>
    <string name="title_articles">Статьи</string>
    <string name="title_bible">Библия</string>
    <string name="title_more">Ещё</string>
    <string name="support_know_bible_link" translatable="false">https://bit.ly/2V9vV7X</string>
    <string name="tv_settings">Настройки</string>
    <string name="tv_find_your_daily_verse">Найди свой стих дня!</string>
    <string name="tv_find_verse">Стих</string>
    <string name="tv_list">Список</string>
    <string name="tv_remember_verse">Запомнить \\n стих</string>
    <string name="tv_theme">Тема</string>
    <string name="tv_interface_language">Язык интерфейса</string>
    <string name="tv_have_to_download_bible">Чтобы пользоваться приложением, вам необходимо скачать, как минимум, один из представленных переводов Библии. После того, как перевод загрузится, нажмите на него, и вы перейдёте в окно Библии.</string>
    <string name="tv_notes">Заметки</string>
    <string name="tv_search">Поиск</string>
    <string name="ed_search">Поиск…</string>
    <string name="tv_daily_verse">Стих дня</string>
    <string name="tv_copy_verse">Копировать</string>
    <string name="tv_highlight_verse">Выделить</string>
    <string name="tv_add_note">Добавить заметку</string>
    <string name="tv_share">Поделиться</string>
    <string name="tv_select_color">Выберите цвет</string>
    <string name="tv_bible_translation">Библейский перевод</string>
    <string name="tv_downloading_canceled">Скачивание перевода прервано</string>
    <string name="tv_color_sample">«Ибо так возлюбил Бог мир…»</string>
    <string name="tv_remove_highlighted_verse">Убрать выделение</string>
    <string name="tv_new_article">Новая статья!</string>
    <string name="tv_about_writing_articles">Мы с радостью предоставляем вам возможность писать и публиковать собственные статьи! Для этого вам нужно обратиться к нам, перейдя по ссылке ниже на наш Telegram канал или на нашу Instagram страничку. Если ваша статья пройдёт проверку на соответствие заданного нами регламента, мы опубликуем её. Ознакомиться с регламентом вы можете нажав на кнопку ниже.</string>
    <string name="tv_add_to_daily_verse">Добавить в «Стих дня»</string>
    <string name="tv_remove_from_daily_verse">Удалить из «Стих дня»</string>
    <string name="btn_old_testament">Ветхий\nЗавет</string>
    <string name="btn_new_testament">Новый\nЗавет</string>
    <string name="btn_old_testament_short">В.З.</string>
    <string name="btn_new_testament_short">Н.З.</string>
    <string name="btn_download">Скачать</string>
    <string name="btn_apply">Применить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_select">Выбрать</string>
    <string name="btn_save_note">Сохранить</string>
    <string name="cb_add_bold_text">Добавить жирный шрифт</string>
    <string name="cb_add_underline">Добавить подчёркивание</string>
    <string name="toast_translation_saved">Перевод сохранён</string>
    <string name="toast_download_translation">Скачайте перевод, прежде чем использовать его</string>
    <string name="toast_no_internet_connection">Нет интернет-соединения</string>
    <string name="toast_select_translation">Выберите перевод</string>
    <string name="toast_please_wait">Пожалуйста, подождите пока завершится загрузка перевода</string>
    <string name="toast_note_added">Заметка добавлена</string>
    <string name="toast_note_edited">Заметка отредактирована</string>
    <string name="toast_note_deleted">Заметка удалена</string>
    <string name="toast_field_cant_be_empty">Поле не может быть пустым</string>
    <string name="toast_find_verse">Найдите стих</string>
    <string name="toast_share_verse">Поделиться стихом</string>
    <string name="toast_error_picture_loading">Сбой загрузки картинки</string>
    <string name="et_thoughts">Ваши размышления</string>
    <string name="folder_name">KnowBible</string>
    <string name="russian_language_translation">Русский</string>
    <string name="ukrainian_language_translation">Украинский</string>
    <string name="english_language_translation">Английский</string>
    <string name="syno_translation">Синодальный перевод</string>
    <string name="ubio_translation">Перевод Ивана Огиенка</string>
    <string name="umt_translation">Украинский Современный Перевод</string>
    <string name="kjv_translation">Перевод Короля Иакова</string>
    <string name="asv_translation">Американская Стандартная Версия</string>
    <string name="english_lang">English</string>
    <string name="english_lang_local_name">Английский</string>
    <string name="russian_lang">Русский</string>
    <string name="russian_lang_local_name">Русский</string>
    <string name="ukrainian_lang">Українська</string>
    <string name="ukrainian_lang_local_name">Украинский</string>
    <string name="nrt_translation">Новый Русский Перевод</string>
    <string name="day_theme">Светлая тема</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="book_theme">Книжная тема</string>
    <string name="telegram_channel_link">https://bit.ly/3rXomNt</string>
    <string name="instagram_channel_link">https://bit.ly/2TPOblY</string>
    <string name="know_bible_help_mail">knowbiblehelp@gmail.com</string>
    <string name="donation_link">https://secure.wayforpay.com/payment/know_bible_donate</string>
    <string name="verse_copied">Стих скопирован</string>
    <string name="toast_no_verses_in_daily_verse">Вы не добавили ни одного стиха в «Стих дня»</string>
    <string name="tv_empty_daily_verses_list">Список стихов пока что пуст</string>
    <string name="rb_all_bible">Вся Библия</string>
    <string name="rb_old_testament">Ветхий Завет</string>
    <string name="rb_new_testament">Новый Завет</string>
    <string name="toast_at_least_three_letters">В поле поиска должно быть минимум три буквы</string>
    <string name="btn_home">Домой</string>
    <string name="btn_interpretation">Толкование</string>
    <string name="tab_first_interpretation">Толкование Далласской Семинарии</string>
    <string name="tab_second_interpretation">Толкование Уильяма МакДональда</string>
    <string name="tab_third_interpretation">Толкование Мэтью Генри</string>
    <string name="tv_support">Поддержать</string>
    <string name="old_testament_info"><![CDATA[<p style=\"text-align: left;\"><strong>&bull; Краткое описание</strong>: Ветхий Завет &ndash; это первая часть Священного Писания, Библии. Если говорить о сути названия, то речь идёт о ряде заветов или договорённостей, которые заключал Господь с людьми (завет между Богом и Ноем, между Богом и Авраамом, между Богом и Его народом Израилем, а также между Богом и Давидом), но которые были нарушены народом Израиля по причине их неверности. В связи с этим, Бог, говоря через своих пророков, указал, что Он заключит новый завет с людьми, который возобновит ту самую договорённость между Богом и людьми. Поскольку с приходом Иисуса Христа пришёл и Новый Завет, то прошлый завет был назван в Библии Ветхим.</p> <p style=\"text-align: left;\"><strong>&bull; Дата</strong>: Ветхий Завет Писался на протяжении более десятка веков: с 15 века до Рождества Христова до примерно 4 века до Р.Х.</p> <p style=\"text-align: left;\"><strong>&bull; Авторство</strong>: Ветхий Завет состоит из 39 отдельных книг, написанных в разных жанрах и стилях, над которыми трудилось более 30 авторов из самых разных слоёв населения, практически никогда не будучи знакомыми друг с другом: цари, вожди, полководцы, пастухи и многие другие. Но личностью, которая всегда контролировала весь процесс написания и открывала взгляд на главные проблемы и темы, освещаемые в книгах, являлся Господь Бог.</p>]]></string>
    <string name="new_testament_info"><![CDATA[<p style=\"text-align: left;\"><strong>&bull; Краткое описание</strong>: Новый Завет &ndash; это вторая часть Священного Писания, Библии. Суть названия кроется в событии, ознаменовавшем начало Нового Завета, новой договорённости между Богом и человеком, а именно в приходе Господа Иисуса Христа, Спасителя людей. Безусловно любящий Бог, воплотившийся в человека и искупивший греховных людей от вечной смерти, проложил человечеству дорогу к непосредственным отношениям с Ним. Практически в каждом написанном обращении речь идёт о единственном условии, которое человек должен соблюсти, чтобы стать причастником новой договорённости между Богом и человеком &ndash; это вера в Господа Иисуса Христа как в своего личного Спасителя от грехов и вечной смерти.</p> <p style=\"text-align: left;\"><strong>&bull; Дата</strong>: Новый Завет писался на протяжении примерно 50-ти лет &ndash; с середины 1-го века после Р.Х. и до конца 1-го века после Р.Х.</p> <p style=\"text-align: left;\"><strong>&bull; Авторство</strong>: Новый Завет состоит из 27 книг и посланий, которые в своём большинстве были написаны апостолами &ndash; учениками Христа. Но как и в Ветхом Завете, в Новом Завете личностью, которая всегда контролировала весь процесс написания и открывала взгляд на главные проблемы и темы, освещаемые в книгах, также являлся Господь Бог.</p>]]></string>
    <string name="tv_highlighted_verses">Выделенные стихи</string>
    <string name="tv_donation_text">Мы нуждаемся в вашей поддержке, чтобы наше служение могло существовать и развиваться!</string>
    <string name="tv_in_development">В РАЗРАБОТКЕ</string>
    <string name="toast_share_note">Поделиться заметкой</string>
    <string name="btn_ok">OK</string>
    <string name="tv_contact_us">Связаться с нами</string>
    <string name="Details">Подробнее</string>
    <string name="tv_donate_details"><![CDATA[<p style=\"text-align: left;\">Вы жертвуете на:</p> <p style=\"text-align: left;\">&nbsp; &nbsp; &nbsp; &nbsp;&bull;&nbsp; &nbsp;материальную помощь разработчиков (на данный момент это супружеская пара)</p> <p style=\"text-align: left;\">&nbsp; &nbsp; &nbsp; &nbsp;&bull;&nbsp; &nbsp;развитие нынешних и создание новых проектов для проповеди Евангелия</p> <p style=\"text-align: left;\">Для более подробной информации вы можете связаться с нами в разделе \"Связаться с нами\"</p> <p style=\"text-align: left;\">Пусть Господь Бог благословит вас!</p>]]></string>
    <string name="btn_daily_verse_title">Стих Дня</string>
    <string name="tv_not_now">Позже</string>
    <string name="tv_read">Читать</string>
    <string name="tv_time_to_read">Сегодня ты ещё не читал Слово Божье! Сейчас то самое время!</string>
</resources>