<?xml version="1.0" encoding="utf-8"?>
<com.app.bible.knowbible.mvvm.view.theme_editor.MyRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
        android:id="@+id/tvSelectColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_select_color"
        android:textSize="16sp" />

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@id/tvSelectColor"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        app:actionMode="always"
        app:palette="@drawable/palette"
        app:preferenceName="MyColorPicker"
        app:selector="@drawable/ic_circle_flag" />

    <!--        <com.android.bible.knowbible.mvvm.view.theme_editor.MyEditText-->
    <!--            android:id="@+id/inputColor"-->
    <!--            style="@style/Widget.AppCompat.EditText"-->
    <!--            android:layout_width="90dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:imeOptions="actionDone"-->
    <!--            android:lines="1"-->
    <!--            android:maxLength="15"-->
    <!--            android:textSize="14sp"-->
    <!--            tools:text="#346578" />-->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/selectedColorView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/colorPickerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="4dp" />

    <ScrollView
        android:id="@+id/tvColoredVerseLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@id/selectedColorView"
        android:layout_marginTop="8dp"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tvColoredVerse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxHeight="100dp"
            android:minHeight="50dp"
            android:textSize="16sp"
            tools:text="@string/tv_color_sample" />

    </ScrollView>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/addBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvColoredVerseLay"
        android:layout_marginTop="12dp"
        android:minWidth="2dp"
        android:minHeight="2dp"
        android:paddingStart="8dp"
        android:text="@string/cb_add_bold_text"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/addUnderline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addBoldText"
        android:minWidth="2dp"
        android:minHeight="2dp"
        android:paddingStart="8dp"
        android:text="@string/cb_add_underline"
        tools:ignore="RtlSymmetry" />

    <com.app.bible.knowbible.mvvm.view.theme_editor.MyButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addUnderline"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@id/btnSelect"
        android:padding="4dp"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        tools:ignore="RtlSymmetry" />

    <com.app.bible.knowbible.mvvm.view.theme_editor.MyButton
        android:id="@+id/btnSelect"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addUnderline"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:padding="4dp"
        android:text="@string/btn_select"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        tools:ignore="RtlSymmetry" />
</com.app.bible.knowbible.mvvm.view.theme_editor.MyRelativeLayout>
