<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyEditText
            android:id="@+id/etSearch"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/ed_search"
            android:imeOptions="actionSearch"
            android:inputType="textCapSentences"
            android:padding="16dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyIconImageView
            android:id="@+id/btnCleanText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_close" />

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            tools:text="120" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutSearch"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbAllBible"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rb_all_bible" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOldTestament"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_old_testament" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbNewTestament"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_new_testament" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/radioGroupSearch"
        android:layout_centerInParent="true"
        android:scrollbars="vertical" />
</RelativeLayout>