<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootR"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rootL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_4sdp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_weight="0.3"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mainImageApp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.45"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mainImageOpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_bible"
                android:visibility="visible"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvPushText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/tv_time_to_read"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1.25"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_6sdp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_push_later"
                android:text="@string/tv_not_now"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRead"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/btn_push_read"
                android:text="@string/tv_read"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
