<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/serviceBtn1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:src="@drawable/ic_articles"
            android:tint="@color/colorBlueLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_articles"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serviceBtn2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:src="@drawable/ic_book_find_second"
            android:tint="@color/colorBlueLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/btn_daily_verse_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serviceBtn3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:src="@drawable/ic_search_panel"
            android:tint="@color/colorBlueLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/tv_search"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>