<?xml version="1.0" encoding="utf-8"?>
<com.app.bible.knowbible.mvvm.view.theme_editor.MyNestedScrollViewLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <com.app.bible.knowbible.mvvm.view.theme_editor.MyLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Тут должен быть именно TextView, а не MyTextView -->
        <TextView
            android:id="@+id/tvVerse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="«Господи, Боже сил! восстанови нас; да воссияет лице Твое, и спасемся! » (Пс. 79:20)" />

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingTop="14dp"
            android:paddingEnd="18dp"
            android:paddingBottom="14dp"
            android:text="@string/tv_copy_verse"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvHighlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingTop="14dp"
            android:paddingEnd="18dp"
            android:paddingBottom="14dp"
            android:text="@string/tv_highlight_verse"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvRemoveHighlighting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingTop="14dp"
            android:paddingEnd="18dp"
            android:paddingBottom="14dp"
            android:text="@string/tv_remove_highlighted_verse"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <com.android.bible.knowbible.mvvm.view.theme_editor.MyTextView-->
<!--            android:id="@+id/tvAddToDailyVerse"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:gravity="start"-->
<!--            android:paddingStart="18dp"-->
<!--            android:paddingTop="14dp"-->
<!--            android:paddingEnd="18dp"-->
<!--            android:paddingBottom="14dp"-->
<!--            android:text="@string/tv_add_to_daily_verse"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <com.android.bible.knowbible.mvvm.view.theme_editor.MyTextView-->
<!--            android:id="@+id/tvRemoveFromDailyVerse"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:gravity="start"-->
<!--            android:paddingStart="18dp"-->
<!--            android:paddingTop="14dp"-->
<!--            android:paddingEnd="18dp"-->
<!--            android:paddingBottom="14dp"-->
<!--            android:text="@string/tv_remove_from_daily_verse"-->
<!--            android:textSize="18sp"-->
<!--            android:visibility="visible"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvAddToNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingTop="14dp"
            android:paddingEnd="18dp"
            android:paddingBottom="14dp"
            android:text="@string/tv_add_note"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.app.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingTop="14dp"
            android:paddingEnd="18dp"
            android:paddingBottom="14dp"
            android:text="@string/tv_share"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.app.bible.knowbible.mvvm.view.theme_editor.MyLinearLayout>
</com.app.bible.knowbible.mvvm.view.theme_editor.MyNestedScrollViewLayout>